--- a/src/assets/style/page.css
+++ b/src/assets/style/page.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Josefin+Sans:wght@700&display=swap");
 body {
-  background-image: url(/public/img/bgbimbo.png);
+  background-image: url(img/bgbimbo.png);
   background-size: 200px;
 }
 body #root {
