--- a/src/assets/style/page.scss
+++ b/src/assets/style/page.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Josefin+Sans:wght@700&display=swap');
 
 body{
-    background-image:url(img/bgbimbo.png);
+    background-image:url(/public/img/bgbimbo.png);
     background-size: 200px;
     #root{
         max-width: 800px;
